fixed: styling of next bookings on smaller devices

--- a/static/css/media.css
+++ b/static/css/media.css
@@ -127,20 +127,8 @@
         display: block;
     }
 
-    .next-booking {
-        width: 100%;
-        height: auto;
-        background-color: #d3d3d3;
-        opacity: 0.8;
-        margin: 2em auto;
-    }
-
     .vouchers {
-        width: 100%;
-        height: 2em;
-        background-color: #d3d3d3;
-        opacity: 0.8;
-        margin: 2em auto;
+        display: block;
     }
 
     .right-container {
@@ -148,7 +136,7 @@
         height: auto;
         background-color: #d3d3d3;
         opacity: 0.8;
-        margin: 2em;
+        margin: auto;
     }
 
     .new-booking {
